# fastapi-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_08_28_0001_init.py
app/bot/handlers/: contactus.py  default.py  menu.py  miniapp.py  start.py  wallet.py
app/core/: security.py
app/routers/: __init__.py  telegram_webhook.py  webapp.py
app/services/: bot_service.py
nginx/: nginx.conf
src/app/: main.py
src/app/bot/handlers/: menu.py  start.py
src/app/config/: config.py
src/app/core/: logging.py  security.py
src/app/db/: session.py
src/app/models/: chat.py  message.py  user.py  webhook_event.py
src/app/routers/: telegram_webhook.py  webapp.py
src/app/services/: bot_service.py  user_service.py  webapp_auth_service.py
src/app/tests/: test_health.py
