[project]
name = "fastapi-telegram-pro"
version = "0.1.0"
description = "Production-grade FastAPI + Aiogram webhook and Telegram Mini App scaffold"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.95.2"
uvicorn = {version = "^0.22.0", extras = ["standard"]}
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.5"
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
httpx = "^0.27"
redis = "^5.0"
slowapi = "^0.1.9"
loguru = "^0.7.0"
PyJWT = "^2.9"
cryptography = "^41.0"
